--- a/XGBoost.ipynb
+++ b/XGBoost.ipynb
@@ -27,8 +27,8 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "env: GCLOUD_PROJECT=sunlit-analyst-309609\n"
      ]
@@ -214,7 +214,15 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Using backup credentials.\n"
+     ]
+    }
+   ],
    "source": [
     "from google.oauth2 import service_account\n",
     "\n",
@@ -343,14 +351,14 @@
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "-0.0007101904942502508"
       ]
      },
-     "execution_count": 11,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 11
     }
    ],
    "source": [
@@ -859,9 +867,143 @@
     }
    ],
    "source": [
-    "%%time\n",
-    "# Try best target score parameters, default parameters, and assigned parameters. \n",
-    "# Then for the same parameter, try whether doubling n_estimators improves training.\n",
+    "# %%time\n",
+    "# # Try best target score parameters, default parameters, and assigned parameters. \n",
+    "# # Then for the same parameter, try whether doubling n_estimators improves training.\n",
+    "\n",
+    "# for table_num in range(len(test_np)):\n",
+    "#     query_string = f\"\"\"\n",
+    "#     SELECT * EXCEPT (AAAA, BB, CC)\n",
+    "#     FROM `sunlit-analyst-309609.training_set.train_table_{table_num}`\n",
+    "#     \"\"\"\n",
+    "    \n",
+    "#     df = (\n",
+    "#         bqclient.query(query_string)\n",
+    "#         .result()\n",
+    "#         .to_dataframe(bqstorage_client=bqstorageclient)\n",
+    "#     )\n",
+    "\n",
+    "#     y = df.pop(target)\n",
+    "#     X = df\n",
+    "\n",
+    "#     print(f\"Starting Table {table_num}.\\n\")\n",
+    "\n",
+    "#     # Try first objective: We can skip best target score as we already computed it.\n",
+    "#     kwargs = [test_np[table_num][\"params\"], test_np[memory_loc][\"params\"]]\n",
+    "#     curr_best = test_np[table_num][\"target\"]\n",
+    "#     best = 0\n",
+    "\n",
+    "#     print(0, \" \", curr_best)\n",
+    "\n",
+    "#     i = 1\n",
+    "    \n",
+    "#     curr_mean = xgb_cv(X, y, \"label\", **kwargs[i])\n",
+    "\n",
+    "#     if curr_mean > curr_best:\n",
+    "#         best = i\n",
+    "#         curr_best = curr_mean\n",
+    "\n",
+    "#     print(i, \" \", curr_mean)\n",
+    "\n",
+    "#     kwargs = kwargs[best]\n",
+    "\n",
+    "#     # Second objective: does doubling n_estimators improve training? \n",
+    "#     kwargs[\"n_estimators\"] = 50\n",
+    "#     curr_mean = xgb_cv(X, y, \"label\", **kwargs)\n",
+    "#     print(i + 1, \" \", curr_mean)\n",
+    "\n",
+    "#     if curr_mean > curr_best:\n",
+    "#         curr_best = curr_mean\n",
+    "#     else:\n",
+    "#         kwargs[\"n_estimators\"] = 25\n",
+    "\n",
+    "#     # Write curr best to file: \n",
+    "#     with open(\"second_target.txt\", \"a\") as f:\n",
+    "#         f.write(f\"Table number {table_num}\\n\")\n",
+    "#         f.write(str(kwargs))\n",
+    "#         f.write(\"\\n\\n\")\n",
+    "\n",
+    "#     print(\"\\nFinished with table \", table_num, \"\\n\")"
+   ]
+  },
+  {
+   "source": [
+    "# Starting to run"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'colsample_bytree': 0.03656843611844854,\n",
+       " 'gamma': 1,\n",
+       " 'learning_rate': 0.20015735931148657,\n",
+       " 'reg_alpha': 51,\n",
+       " 'reg_lambda': 6,\n",
+       " 'subsample': 0.706407720122008,\n",
+       " 'max_depth': 15,\n",
+       " 'n_estimators': 25}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 13
+    }
+   ],
+   "source": [
+    "# Read parameters from second_target.txt\n",
+    "\n",
+    "test_df = []\n",
+    "\n",
+    "with open(\"second_target.txt\") as f:\n",
+    "    test_df.append(f.readlines())\n",
+    "\n",
+    "test_df = np.squeeze(np.array(test_df))\n",
+    "\n",
+    "test_np = []\n",
+    "for ii in np.arange(1, len(test_df), 3):\n",
+    "    test_np.append(test_df[ii].strip(\"\\n\"))\n",
+    "\n",
+    "test_np = np.array(test_np)\n",
+    "\n",
+    "test_np = np.array([ast.literal_eval(test_np[ii]) for ii in np.arange(len(test_np))])\n",
+    "\n",
+    "del test_df\n",
+    "\n",
+    "test_np[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-2a863d579876>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     df = (\n\u001b[0;32m---> 10\u001b[0;31m         \u001b[0mbqclient\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery_string\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m         \u001b[0;34m.\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0;34m.\u001b[0m\u001b[0mto_dataframe\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbqstorage_client\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbqstorageclient\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/workspace/.pip-modules/lib/python3.8/site-packages/google/cloud/bigquery/table.py\u001b[0m in \u001b[0;36mto_dataframe\u001b[0;34m(self, bqstorage_client, dtypes, progress_bar_type, create_bqstorage_client, date_as_object)\u001b[0m\n\u001b[1;32m   1862\u001b[0m             \u001b[0mbqstorage_client\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1863\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1864\u001b[0;31m         record_batch = self.to_arrow(\n\u001b[0m\u001b[1;32m   1865\u001b[0m             \u001b[0mprogress_bar_type\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mprogress_bar_type\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1866\u001b[0m             \u001b[0mbqstorage_client\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbqstorage_client\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/workspace/.pip-modules/lib/python3.8/site-packages/google/cloud/bigquery/table.py\u001b[0m in \u001b[0;36mto_arrow\u001b[0;34m(self, progress_bar_type, bqstorage_client, create_bqstorage_client)\u001b[0m\n\u001b[1;32m   1677\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1678\u001b[0m             \u001b[0mrecord_batches\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1679\u001b[0;31m             for record_batch in self._to_arrow_iterable(\n\u001b[0m\u001b[1;32m   1680\u001b[0m                 \u001b[0mbqstorage_client\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbqstorage_client\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1681\u001b[0m             ):\n",
+      "\u001b[0;32m/workspace/.pip-modules/lib/python3.8/site-packages/google/cloud/bigquery/table.py\u001b[0m in \u001b[0;36m_to_page_iterable\u001b[0;34m(self, bqstorage_download, tabledata_list_download, bqstorage_client)\u001b[0m\n\u001b[1;32m   1577\u001b[0m             \u001b[0;32melse\u001b[0m \u001b[0mtabledata_list_download\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1578\u001b[0m         )\n\u001b[0;32m-> 1579\u001b[0;31m         \u001b[0;32myield\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mresult_pages\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1580\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1581\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_to_arrow_iterable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbqstorage_client\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/workspace/.pip-modules/lib/python3.8/site-packages/google/cloud/bigquery/_pandas_helpers.py\u001b[0m in \u001b[0;36m_download_table_bqstorage\u001b[0;34m(project_id, table, bqstorage_client, preserve_order, selected_fields, page_to_item, max_queue_size)\u001b[0m\n\u001b[1;32m    718\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    719\u001b[0m                 \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 720\u001b[0;31m                     \u001b[0mframe\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mworker_queue\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0m_PROGRESS_INTERVAL\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    721\u001b[0m                     \u001b[0;32myield\u001b[0m \u001b[0mframe\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    722\u001b[0m                 \u001b[0;32mexcept\u001b[0m \u001b[0mqueue\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mEmpty\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# pragma: NO COVER\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/3.8.10/lib/python3.8/queue.py\u001b[0m in \u001b[0;36mget\u001b[0;34m(self, block, timeout)\u001b[0m\n\u001b[1;32m    177\u001b[0m                     \u001b[0;32mif\u001b[0m \u001b[0mremaining\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0;36m0.0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    178\u001b[0m                         \u001b[0;32mraise\u001b[0m \u001b[0mEmpty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 179\u001b[0;31m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnot_empty\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mremaining\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    180\u001b[0m             \u001b[0mitem\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    181\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnot_full\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnotify\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/3.8.10/lib/python3.8/threading.py\u001b[0m in \u001b[0;36mwait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    304\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    305\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mtimeout\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 306\u001b[0;31m                     \u001b[0mgotit\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwaiter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0macquire\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    307\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    308\u001b[0m                     \u001b[0mgotit\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwaiter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0macquire\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "required_test_df = pd.DataFrame()\n",
     "\n",
     "for table_num in range(len(test_np)):\n",
     "    query_string = f\"\"\"\n",
@@ -878,44 +1020,39 @@
     "    y = df.pop(target)\n",
     "    X = df\n",
     "\n",
-    "    print(f\"Starting Table {table_num}.\\n\")\n",
+    "    kwargs = test_np[table_num]\n",
     "\n",
-    "    # Try first objective: We can skip best target score as we already computed it.\n",
-    "    kwargs = [test_np[table_num][\"params\"], test_np[memory_loc][\"params\"]]\n",
-    "    curr_best = test_np[table_num][\"target\"]\n",
-    "    best = 0\n",
+    "    xg_reg = xgb.XGBRegressor(objective=\"reg:squarederror\", **kwargs)\n",
     "\n",
-    "    print(0, \" \", curr_best)\n",
+    "    print(f\"Table {table_num} start fitting.\")\n",
     "\n",
-    "    i = 1\n",
-    "    \n",
-    "    curr_mean = xgb_cv(X, y, \"label\", **kwargs[i])\n",
+    "    xg_reg.fit(X, y)\n",
     "\n",
-    "    if curr_mean > curr_best:\n",
-    "        best = i\n",
-    "        curr_best = curr_mean\n",
+    "    # Get prediction\n",
+    "    query_string = f\"\"\"\n",
+    "    SELECT * EXCEPT (AAAA, BB, CC)\n",
+    "    FROM `sunlit-analyst-309609.test_set.test_table_{table_num}`\n",
+    "    \"\"\"\n",
     "\n",
-    "    print(i, \" \", curr_mean)\n",
+    "    df_test = (\n",
+    "        bqclient.query(query_string)\n",
+    "        .result()\n",
+    "        .to_dataframe(bqstorage_client=bqstorageclient)\n",
+    "    )\n",
     "\n",
-    "    kwargs = kwargs[best]\n",
+    "    preds = xg_reg.predict(df_test)\n",
     "\n",
-    "    # Second objective: does doubling n_estimators improve training? \n",
-    "    kwargs[\"n_estimators\"] = 50\n",
-    "    curr_mean = xgb_cv(X, y, \"label\", **kwargs)\n",
-    "    print(i + 1, \" \", curr_mean)\n",
+    "    required_test_df = pd.concat([required_test_df, pd.DataFrame(preds)], axis=1)\n",
     "\n",
-    "    if curr_mean > curr_best:\n",
-    "        curr_best = curr_mean\n",
-    "    else:\n",
-    "        kwargs[\"n_estimators\"] = 25\n",
+    "    # New!!! Print score action on train set. \n",
+    "    print(\"RMSE (x10^3): \", 1e3 * np.sqrt(mean_squared_error(y, xg_reg.predict(X))))\n",
     "\n",
-    "    # Write curr best to file: \n",
-    "    with open(\"second_target.txt\", \"a\") as f:\n",
-    "        f.write(f\"Table number {table_num}\\n\")\n",
-    "        f.write(str(kwargs))\n",
-    "        f.write(\"\\n\\n\")\n",
+    "    print(f\"\\n Table {table_num} completed.\\n\")\n",
     "\n",
-    "    print(\"\\nFinished with table \", table_num, \"\\n\")"
+    "    del df, y, df_test, preds\n",
+    "\n",
+    "\n",
+    "required_test_df.to_csv(storage_name, header=False, index=False, sep=\"\\t\")"
    ]
   },
   {
@@ -1129,7 +1266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.10-final"
   }
  },
  "nbformat": 4,
