--- a/testing_our.ipynb
+++ b/testing_our.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,7 @@
     "import pandas as pd\n",
     "import pathlib\n",
     "import itertools\n",
+    "import torch\n",
     "\n",
     "# project_dir = pathlib.Path(__file__).parent.absolute()\n",
     "\n",
@@ -23,11 +24,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "item_lc_path = lc_train_path + \"0100_01_01.txt\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = np.loadtxt(item_lc_path)\n",
+    "test = torch.from_numpy(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "torch.Size([55, 300])"
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(tensor([[0.5048, 0.7209, 0.8134,  ..., 1.0003, 0.9997, 0.9991],\n         [0.5039, 0.7216, 0.8138,  ..., 0.9991, 1.0003, 1.0003],\n         [0.5042, 0.7222, 0.8142,  ..., 1.0002, 1.0004, 0.9994],\n         ...,\n         [0.5041, 0.7236, 0.8173,  ..., 0.9990, 0.9977, 0.9982],\n         [0.5043, 0.7202, 0.8123,  ..., 0.9975, 1.0022, 1.0007],\n         [0.5037, 0.7238, 0.8101,  ..., 1.0021, 1.0060, 1.0080]],\n        dtype=torch.float64),)"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "some = torch.split(test, 55)\n",
+    "some"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "torch.Size([300])"
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "some[0][0].shape"
    ]
   },
   {
@@ -60,14 +126,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[4880.0, 4.5, 0.73, 0.77, 9.688, 6.67202]"
       ]
      },
+     "execution_count": 7,
      "metadata": {},
-     "execution_count": 7
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -80,14 +146,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[4880.0, 0.73, 0.77, 9.688, 6.67202]"
       ]
      },
+     "execution_count": 8,
      "metadata": {},
-     "execution_count": 8
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -101,14 +167,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[4880.0, 0, 0.77, 9.688, 6.67202]"
       ]
      },
+     "execution_count": 9,
      "metadata": {},
-     "execution_count": 9
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -124,14 +190,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "array([4.88000e+03, 0.00000e+00, 7.70000e-01, 9.68800e+00, 6.67202e+00])"
       ]
      },
+     "execution_count": 10,
      "metadata": {},
-     "execution_count": 10
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -145,14 +211,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "array([4.88000e+03, 0.00000e+00, 7.70000e-01, 9.68800e+00, 6.67202e+00])"
       ]
      },
+     "execution_count": 11,
      "metadata": {},
-     "execution_count": 11
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -165,7 +231,6 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "BaselineConv(\n",
@@ -177,8 +242,9 @@
        ")"
       ]
      },
+     "execution_count": 12,
      "metadata": {},
-     "execution_count": 12
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -205,8 +271,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit ('3.8.10')",
-   "name": "python381064bit3810b75c14471060437fb07efb1eb7221c37"
+   "display_name": "Python 3.7.9 64-bit ('py37_pytorch': conda)",
+   "name": "python379jvsc74a57bd0b5079757533a07d523b22964b5bda6a42550d36e9c94eb5f662e38c34376cbf3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -218,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10-final"
+   "version": "3.7.9"
   },
   "orig_nbformat": 3
  },
