--- a/testing_our.ipynb
+++ b/testing_our.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,10 @@
     "import pathlib\n",
     "import itertools\n",
     "import torch\n",
+    "import matplotlib.pyplot as plt\n",
+    "from torchvision import transforms\n",
+    "from PIL import Image\n",
+    "from efficientnet_pytorch import EfficientNet\n",
     "\n",
     "# project_dir = pathlib.Path(__file__).parent.absolute()\n",
     "\n",
@@ -20,6 +24,47 @@
     "# params_train_path = \"/home/dsvm113/IdeaProjects/workspace/data_1/training_set/params_train/\"\n",
     "lc_train_path = \"./data/noisy_train/\"\n",
     "params_train_path = \"./data/params_train/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 224, 224])\n"
+     ]
+    }
+   ],
+   "source": [
+    "tfms = transforms.Compose([transforms.Resize((224, 224)), transforms.ToTensor(),\n",
+    "    transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225]),])\n",
+    "img = tfms(Image.open('data/0001_01.png')).unsqueeze(0)\n",
+    "print(img.shape) # torch.Size([1, 3, 224, 224])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded pretrained weights for efficientnet-b0\n",
+      "torch.Size([1, 1280, 7, 7])\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = EfficientNet.from_pretrained(\"efficientnet-b0\")\n",
+    "\n",
+    "features = model.extract_features(img)\n",
+    "print(features.shape)"
    ]
   },
   {
@@ -48,7 +93,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "torch.Size([55, 300])"
+      "text/plain": [
+       "torch.Size([55, 300])"
+      ]
      },
      "execution_count": 11,
      "metadata": {},
@@ -66,7 +113,16 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "(tensor([[0.5048, 0.7209, 0.8134,  ..., 1.0003, 0.9997, 0.9991],\n         [0.5039, 0.7216, 0.8138,  ..., 0.9991, 1.0003, 1.0003],\n         [0.5042, 0.7222, 0.8142,  ..., 1.0002, 1.0004, 0.9994],\n         ...,\n         [0.5041, 0.7236, 0.8173,  ..., 0.9990, 0.9977, 0.9982],\n         [0.5043, 0.7202, 0.8123,  ..., 0.9975, 1.0022, 1.0007],\n         [0.5037, 0.7238, 0.8101,  ..., 1.0021, 1.0060, 1.0080]],\n        dtype=torch.float64),)"
+      "text/plain": [
+       "(tensor([[0.5048, 0.7209, 0.8134,  ..., 1.0003, 0.9997, 0.9991],\n",
+       "         [0.5039, 0.7216, 0.8138,  ..., 0.9991, 1.0003, 1.0003],\n",
+       "         [0.5042, 0.7222, 0.8142,  ..., 1.0002, 1.0004, 0.9994],\n",
+       "         ...,\n",
+       "         [0.5041, 0.7236, 0.8173,  ..., 0.9990, 0.9977, 0.9982],\n",
+       "         [0.5043, 0.7202, 0.8123,  ..., 0.9975, 1.0022, 1.0007],\n",
+       "         [0.5037, 0.7238, 0.8101,  ..., 1.0021, 1.0060, 1.0080]],\n",
+       "        dtype=torch.float64),)"
+      ]
      },
      "execution_count": 13,
      "metadata": {},
@@ -85,7 +141,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "torch.Size([300])"
+      "text/plain": [
+       "torch.Size([300])"
+      ]
      },
      "execution_count": 19,
      "metadata": {},
@@ -270,9 +328,12 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "c28c176a6561e0f599baf12f61c08a38880cae9f7d0fc7d3751de036b3a31dd1"
+  },
   "kernelspec": {
-   "display_name": "Python 3.7.9 64-bit ('py37_pytorch': conda)",
-   "name": "python379jvsc74a57bd0b5079757533a07d523b22964b5bda6a42550d36e9c94eb5f662e38c34376cbf3"
+   "display_name": "Python 3.8.10 64-bit ('py38_pytorch': conda)",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -284,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.10"
   },
   "orig_nbformat": 3
  },
